objects/UserRegistration__c/UserRegistration__c.object-meta.xml
<CustomObject>
    <label>User.</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>