objects/UserRegistration__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <label>User (Forwarder /Logistics /Co-loader)</label>
            </value>
            <value>
                <fullName>Supplier</fullName>
                <label>Supplier (Master Consolidator /Air Freight - Sea Freight Supplier)</label>
            </value>
            <value>
                <fullName>Co-Loader</fullName>
                <isActive>false</isActive>
                <label>Co-Loader</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Master Consol</fullName>
                <isActive>false</isActive>
                <label>Master Consol</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>