objects/UserRegistration__c/fields/Authentic_Code__c.field-meta.xml
<CustomField>
    <fullName>Authentic_Code__c</fullName>
    <inlineHelpText>Please Register or Contact us if you do not have Authentic code.</inlineHelpText>
    <label>Authentic Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>