objects/UserRegistration__c/fields/Company_Account__c.field-meta.xml
<CustomField>
    <fullName>Company_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Users</relationshipLabel>
    <relationshipName>Users</relationshipName>
    <type>Lookup</type>
</CustomField>