objects/UserRegistration__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Users</relationshipLabel>
    <relationshipName>Users</relationshipName>
    <type>Lookup</type>
</CustomField>