objects/UserRegistration__c/fields/Reset_Password__c.field-meta.xml
<CustomField>
    <fullName>Reset_Password__c</fullName>
    <label>Reset Password</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>