objects/UserRegistration__c/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <label>Tax Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>