objects/UserRegistration__c/recordTypes/Admin.recordType-meta.xml
<RecordType>
    <fullName>Admin</fullName>
    <active>false</active>
    <label>Admin</label>
</RecordType>