objects/UserRegistration__c/recordTypes/Direct_Shipper_Cargo_Owner.recordType-meta.xml
<RecordType>
    <fullName>Direct_Shipper_Cargo_Owner</fullName>
    <active>true</active>
    <label>Direct Shipper / Cargo Owner</label>
</RecordType>