objects/UserRegistration__c/recordTypes/FreightForwarderLogisticsCoLoader.recordType-meta.xml
<RecordType>
    <fullName>FreightForwarderLogisticsCoLoader</fullName>
    <active>true</active>
    <label>Freight Forwarder / Logistics / Co - Loader</label>
</RecordType>