objects/UserRegistration__c/recordTypes/Master_Consolidator.recordType-meta.xml
<RecordType>
    <fullName>Master_Consolidator</fullName>
    <active>true</active>
    <label>Master Consolidator</label>
</RecordType>