objects/UserRegistration__c/validationRules/Reject_Personal_email.validationRule-meta.xml
<ValidationRule>
    <fullName>Reject_Personal_email</fullName>
    <active>false</active>
    <errorConditionFormula>OR(CONTAINS(  Email__c , &quot;gmail.com&quot;),
CONTAINS(  Email__c , &quot;yahoo.com&quot;),
CONTAINS(  Email__c , &quot;hotmail.com&quot;),
CONTAINS(  Email__c , &quot;aol.com&quot;),
CONTAINS(  Email__c , &quot;hotmail.co.uk&quot;),
CONTAINS(  Email__c , &quot;hotmail.fr&quot;),
CONTAINS(  Email__c , &quot;msn.com&quot;),
CONTAINS(  Email__c , &quot;yahoo.fr&quot;),
CONTAINS(  Email__c , &quot;wanadoo.fr&quot;), 
CONTAINS(  Email__c , &quot;orange.fr&quot;),
CONTAINS(  Email__c , &quot;comcast.net&quot;), 
CONTAINS(  Email__c , &quot;yahoo.co.uk&quot;), 
CONTAINS(  Email__c , &quot;yahoo.com.br&quot;), 
CONTAINS(  Email__c , &quot;yahoo.co.in&quot;), 
CONTAINS(  Email__c , &quot;live.com&quot;),
CONTAINS(  Email__c , &quot;rediffmail.com&quot;), 
CONTAINS(  Email__c , &quot;free.fr&quot;),
CONTAINS(  Email__c , &quot;gmx.de&quot;),
CONTAINS(  Email__c , &quot;web.de&quot;),
CONTAINS(  Email__c , &quot;yandex.ru&quot;),
CONTAINS(  Email__c , &quot;ymail.com&quot;),
CONTAINS(  Email__c , &quot;libero.it&quot;),
CONTAINS(  Email__c , &quot;outlook.com&quot;),
CONTAINS(  Email__c , &quot;uol.com.br&quot;),
CONTAINS(  Email__c , &quot;bol.com.br&quot;),
CONTAINS(  Email__c , &quot;mail.ru&quot;),
CONTAINS(  Email__c , &quot;cox.net&quot;),
CONTAINS(  Email__c , &quot;hotmail.it&quot;),
CONTAINS(  Email__c , &quot;sbcglobal.net&quot;),
CONTAINS(  Email__c , &quot;sfr.fr&quot;),
CONTAINS(  Email__c , &quot;live.fr&quot;),
CONTAINS(  Email__c , &quot;verizon.net&quot;),
CONTAINS(  Email__c , &quot;live.co.uk&quot;),
CONTAINS(  Email__c , &quot;googlemail.com&quot;), 
CONTAINS(  Email__c , &quot;yahoo.es&quot;),
CONTAINS(  Email__c , &quot;ig.com.br&quot;),
CONTAINS(  Email__c , &quot;live.nl&quot;),
CONTAINS(  Email__c , &quot;bigpond.com&quot;),
CONTAINS(  Email__c , &quot;terra.com.br&quot;),
CONTAINS(  Email__c , &quot;yahoo.it&quot;),
CONTAINS(  Email__c , &quot;neuf.fr&quot;),
CONTAINS(  Email__c , &quot;yahoo.de&quot;),
CONTAINS(  Email__c , &quot;alice.it&quot;),
CONTAINS(  Email__c , &quot;rocketmail.com&quot;), 
CONTAINS(  Email__c , &quot;att.net&quot;),
CONTAINS(  Email__c , &quot;laposte.net&quot;),
CONTAINS(  Email__c , &quot;facebook.com&quot;),
CONTAINS(  Email__c , &quot;bellsouth.net&quot;), 
CONTAINS(  Email__c , &quot;yahoo.in&quot;),
CONTAINS(  Email__c , &quot;hotmail.es&quot;),
CONTAINS(  Email__c , &quot;charter.net&quot;),
CONTAINS(  Email__c , &quot;yahoo.ca&quot;),
CONTAINS(  Email__c , &quot;yahoo.com.au&quot;), 
CONTAINS(  Email__c , &quot;rambler.ru&quot;),
CONTAINS(  Email__c , &quot;tiscali.it&quot;),
CONTAINS(  Email__c , &quot;shaw.ca&quot;),
CONTAINS(  Email__c , &quot;yahoo.co.jp&quot;), 
CONTAINS(  Email__c , &quot;sky.com&quot;))</errorConditionFormula>
    <errorDisplayField>Account_Type__c</errorDisplayField>
    <errorMessage>Please Input Business Email</errorMessage>
</ValidationRule>